@@ -17,8 +17,8 @@ package org.powermock.tests.utils;
 
 import java.lang.reflect.Method;
 import java.util.List;
-import java.util.Set;
-import java.util.Map.Entry;
+
+import org.powermock.tests.utils.impl.TestChunk;
 
 /**
  * An interface that should be implemented by classes that performs test suite
@@ -32,7 +32,7 @@ public interface TestSuiteChunker {
 	/**
 	 * Create the test delegators needed for a whole class.
 	 */
-	public void createTestDelegators(Class<?> testClass, Set<Entry<ClassLoader, List<Method>>> entrySet) throws Exception;
+	public void createTestDelegators(Class<?> testClass, List<TestChunk> chunks) throws Exception;
 
 	/**
 	 * Get the number of chunks defined in this suite.
@@ -48,7 +48,7 @@ public interface TestSuiteChunker {
 	 * @return An set of entries that contains a list of methods contained in
 	 *         the chunk and the class loader that loaded these methods.
 	 */
-	public Set<Entry<ClassLoader, List<Method>>> getAllChunkEntries();
+	public List<TestChunk> getAllChunkEntries();
 
 	/**
 	 * Get all chunk entries for a specific class.
@@ -59,7 +59,7 @@ public interface TestSuiteChunker {
 	 *         the chunk for the specific test class and the class loader that
 	 *         loaded these methods.
 	 */
-	public Set<Entry<ClassLoader, List<Method>>> getChunkEntries(Class<?> testClass);
+	public List<TestChunk> getTestChunksEntries(Class<?> testClass);
 
 	/**
 	 * Should reflect whether or not this method is eligible for testing.
@@ -94,7 +94,8 @@ public interface TestSuiteChunker {
 	 * 
 	 * @param classes
 	 *            An array of the fully qualified name of the classes to modify.
-	 * @param packagesToIgnore TODO
+	 * @param packagesToIgnore
+	 *            Packages to ignore.
 	 */
 	public ClassLoader createNewClassloader(String[] classes, String[] packagesToIgnore);
 
